--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <version>2.1.0</version>
     </parent>
 
-    <groupId>com.dataliquid.conventions</groupId>
+    <groupId>com.dataliquid.guidelines</groupId>
     <artifactId>coding-conventions</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
